Linear Space SPM for CV

--- a/src/cc/Makefile
+++ b/src/cc/Makefile
@@ -1,2 +1,4 @@
 main: main.cc
-	g++ -O3 -std=c++11 -march=native main.cc -o pmc
+	g++ -g -std=c++11 -march=native main.cc -o pmc
+
+#	g++ -O3 -std=c++11 -march=native main.cc -o pmc
