added minp check for completeness

--- a/src/cc/Makefile
+++ b/src/cc/Makefile
@@ -1,5 +1,7 @@
-all: main prof debug
+all: main prof debug mahito
 
+mahito: mahito.cc
+	g++ -O3 -std=c++11 -march=native mahito.cc -o mahito.opt
 main: main.cc
 	g++ -O3 -std=c++11 -march=native main.cc -o pmc.opt
 prof: main.cc
